Add social networking profiles

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ author :
   email : akraut@gmail.com
   github : opie4624
   twitter : akraut
+  googleplus : 116891939297330204786
+  facebook : akraut
+  linkedin : akraut
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
