--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Down to this
-tagline: "You get the ankles, and I'll get the wrists"
+title : opie.at
+tagline: "You get the ankles, and I'll get the wrists."
 author :
   name : Andrew Kraut
   email : akraut@gmail.com
