Update FeedBurner url

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author :
   googleplus : 116891939297330204786
   facebook : akraut
   linkedin : akraut
-  feedburner : feedname
+  feedburner : opieat
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
